aml-parser/src/snapshots/aml_parser__expressions__test__map_lookup.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
ArrayIndex:
  lhs:
    Ident:
      location:
        start_byte: 0
        end_byte: 3
      value: map
  index:
    String:
      location:
        start_byte: 4
        end_byte: 9
      value: "'key'"
