aml-parser/src/snapshots/aml_parser__expressions__test__nested_list.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
List:
  items:
    - Primitive:
        Int: 1
    - List:
        items:
          - Primitive:
              Int: 2
          - Primitive:
              Int: 3
          - List:
              items:
                - Primitive:
                    Int: 4
                - Primitive:
                    Int: 5
