aml-parser/src/snapshots/aml_parser__expressions__test__not.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
Binary:
  lhs:
    Binary:
      lhs:
        Primitive:
          Int: 1
      rhs:
        Primitive:
          Int: 2
      op: NotEqual
  rhs:
    Binary:
      lhs:
        Primitive:
          Int: 3
      rhs:
        Primitive:
          Int: 4
      op: NotEqual
  op: And
