aml-parser/src/snapshots/aml_parser__expressions__test__sub.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
Binary:
  lhs:
    Primitive:
      Int: 1
  rhs:
    Primitive:
      Int: 2
  op: Minus
